@@ -4,7 +4,7 @@ def ctx = context( scope: scriptScope( name: ascriptPattern ) )
 
 contributor( ctx ) {
 	property name: 'swinger', type: 'com.athaydes.automaton.Swinger'
-	delegatesTo( findClass( "com.athaydes.automaton.Swinger" ) )
+	delegatesTo( findClass( "com.athaydes.automaton.SwingerFxer" ) )
 	delegatesTo( findClass( "com.athaydes.automaton.SwingUtil" ) )
 	delegatesTo( findClass( "org.junit.Assert" ) )
 	delegatesTo( findClass( "com.athaydes.automaton.assertion.AutomatonMatcher" ) )
